// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CurrentCard 1`] = `
<div
  className="card"
>
  <h2
    className="card-text"
  >
    <span>
      Do something.
    </span>
  </h2>
</div>
`;

exports[`renders DisplayedCard = card 1`] = `
<div
  className="card"
>
  <h2
    className="card-text"
  >
    <span>
      Do something.
    </span>
  </h2>
</div>
`;

exports[`renders DisplayedCard = null 1`] = `
<p>
  There is no card to display (yet).
</p>
`;

exports[`renders InspectorView 1`] = `
<div>
  <h1>
    Inspecting 
    Truth or Dare
  </h1>
  <h2>
    Status
  </h2>
  <p>
    So far, 
    0
     cards have been played.
  </p>
  <p>
    There are 
    2
     cards remaining.
  </p>
  <h2>
    Events
  </h2>
  <p>
    In this game there are 
    1
     events played so far.
  </p>
  <h2>
    Slots
  </h2>
  <pre
    style={
      {
        "fontSize": "80%",
      }
    }
  >
    []
  </pre>
  <h2>
    Players
  </h2>
  <pre
    style={
      {
        "fontSize": "80%",
      }
    }
  >
    []
  </pre>
  <h2>
    Template
  </h2>
  <pre
    style={
      {
        "fontSize": "80%",
      }
    }
  >
    [
  {
    "name": "first stack",
    "ref": "#first stack",
    "cards": [
      {
        "ref": "#first stack^0",
        "text": "one card",
        "annotations": []
      }
    ]
  },
  {
    "name": "second stack",
    "ref": "#second stack",
    "cards": [
      {
        "ref": "#second stack^0",
        "text": "first of two cards",
        "annotations": []
      },
      {
        "ref": "#second stack^1",
        "text": "second of two cards",
        "annotations": []
      }
    ]
  }
]
  </pre>
</div>
`;

exports[`renders NoCard 1`] = `
<p>
  There is no card to display (yet).
</p>
`;

exports[`renders PlayView 1`] = `
<div>
  <h1>
    Truth or Dare
  </h1>
  <div
    className="card"
  >
    <h2
      className="card-text"
    >
      <span>
        one card
      </span>
    </h2>
  </div>
  <h2>
    Buttons
  </h2>
  <br />
  <br />
  <div />
</div>
`;
